pesh update trae ai

--- a/index.html
+++ b/index.html
@@ -2,9 +2,54 @@
 <html lang="ku" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
+    <link rel="apple-touch-icon" href="/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>idea-website</title>
+
+    <title>Idea Foundation | ئەرشیفی کتێب و بیرۆکە</title>
+    <meta
+      name="description"
+      content="Idea Foundation ئەرشیفێکی گشتی و دیجیتاڵییە بۆ کتێب، گۆڤار، ئینفۆگرافیک و ناوەڕۆکی فێرکاری بە زمانی کوردی. گەڕان، پۆل‌بەندی و دەستگەیشتن بە بڵاوکراوەکان بە شێوەی خێرا و ڕێکخراو."
+    />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <link rel="canonical" href="https://ideafoundation.co/" />
+
+    <meta property="og:site_name" content="Idea Foundation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ideafoundation.co/" />
+    <meta property="og:title" content="Idea Foundation | ئەرشیفی کتێب و بیرۆکە" />
+    <meta
+      property="og:description"
+      content="ئەرشیفی کتێب، گۆڤار، ئینفۆگرافیک و ناوەڕۆکی فێرکاری بە زمانی کوردی. گەڕان و پۆل‌بەندی بە شێوەی خێرا و ڕێکخراو."
+    />
+    <meta property="og:image" content="https://ideafoundation.co/logo.jpeg" />
+    <meta property="og:image:alt" content="Idea Foundation logo" />
+    <meta property="og:locale" content="ckb_IQ" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Idea Foundation | ئەرشیفی کتێب و بیرۆکە" />
+    <meta
+      name="twitter:description"
+      content="ئەرشیفی کتێب، گۆڤار، ئینفۆگرافیک و ناوەڕۆکی فێرکاری بە زمانی کوردی."
+    />
+    <meta name="twitter:image" content="https://ideafoundation.co/logo.jpeg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Idea Foundation",
+        "url": "https://ideafoundation.co/",
+        "inLanguage": "ku",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://ideafoundation.co/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
